tests/error/errors_on_usage/else_expr_type_change.err
Error: Different types (at $FILE:8:11)
  | 
6 |     y = 3
7 |     (y := y + 1) if x else (y := True)
8 |     return y
  |            ^ Variable `y` may refer to different types
  | 
7 |     (y := y + 1) if x else (y := True)
  |      - This is of type `int`
  | 
7 |     (y := y + 1) if x else (y := True)
  |                             - This is of type `bool`

Guppy compilation failed due to 1 previous error
